fix: resolve issue with button not visible

--- a/styles/hamburgerPop.scss
+++ b/styles/hamburgerPop.scss
@@ -1,6 +1,6 @@
 .sqa-wrapper {
   position: fixed;
-  z-index: 1000;
+  z-index: 100;
   right: 0;
   top: 45%;
   width: 78px;
@@ -22,7 +22,6 @@
     }
   }
 }
-
 
 .hamburgerPop {
   transition: opacity 0.5s ease, visibility 0.5s ease;
