--- a/styles/lifestyle.scss
+++ b/styles/lifestyle.scss
@@ -37,31 +37,31 @@
   }
 
   .pill {
-    background: #f4f6f9 url(../images/건강기능식품.png) no-repeat center;
+    background: #f4f6f9 url(/images/건강기능식품.png) no-repeat center;
     background-size: 170px 170px;
 
     &:hover {
-      background: #015294 url(../images/건강기능식품호버.png)no-repeat center;
+      background: #015294 url(/images/건강기능식품호버.png)no-repeat center;
       background-size: 170px 170px;
     }
   }
 
   .bowl {
-    background: #f4f6f9 url(../images/일반식품.png) no-repeat center;
+    background: #f4f6f9 url(/images/일반식품.png) no-repeat center;
     background-size: 170px 170px;
 
     &:hover {
-      background: #015294 url(../images/일반식품호버.png)no-repeat center;
+      background: #015294 url(/images/일반식품호버.png)no-repeat center;
       background-size: 170px 170px;
     }
   }
 
   .cosmetic {
-    background: #f4f6f9 url(../images/화장품.png) no-repeat center;
+    background: #f4f6f9 url(/images/화장품.png) no-repeat center;
     background-size: 170px 170px;
 
     &:hover {
-      background: #015294 url(../images/화장품호버.png)no-repeat center;
+      background: #015294 url(/images/화장품호버.png)no-repeat center;
       background-size: 170px 170px;
     }
   }
