--- a/styles/visual.scss
+++ b/styles/visual.scss
@@ -70,7 +70,6 @@
           font-weight: 600;
           letter-spacing: -2px;
 
-
           span {
             font-size: 55px;
           }
@@ -105,7 +104,6 @@
           gap: 8px;
           opacity: 80%;
           letter-spacing: -1px;
-
         }
       }
     }
@@ -122,7 +120,7 @@
     .slider-cover {
       width: 100%;
       position: absolute;
-      z-index: 999;
+      z-index: 99;
 
       img {
         width: 100%;
@@ -133,93 +131,10 @@
       width: 699px;
       height: 584px;
 
-      .swiper-wrapper {
-        .swiper-slide {}
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
+      img {
+        width: 100%;
+        height: 100%;
       }
     }
-
-
-
   }
-
-  // .main-slider {
-
-  //   // position: absolute;
-  //   // position: relative;
-  //   // overflow: hidden;
-  //   // position: absolute;
-  //   // right: 0;
-
-  //   img {
-  //     width: 702px;
-  //     height: 596px;
-  //     // display: block;
-  //   }
-
-
-
-  //   .bx-wrapper img {
-  //     height: 100%;
-  //   }
-
-  //   .blue-imgs {
-  //     // position: absolute;
-  //     // top: 0;
-  //     // z-index: 9999;
-  //   }
-
-  // }
-
-  // .main-slider {
-  //   background-color: aqua;
-  //   position: relative;
-  //   width: 100%;
-  //   max-width: 1200px;
-  //   /* 적절한 너비 설정 */
-  //   // margin: 0 auto;
-
-  //   .slider-frame {
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //     z-index: 2;
-  //     /* 프레임이 슬라이드 위에 오도록 설정 */
-  //     pointer-events: none;
-  //     /* 클릭 방지 */
-
-  //     // width: 704px;
-  //     height: 598px;
-
-  //     width: 100%;
-  //     // height: 589px;
-  //     //     // display: block;
-  //   }
-
-  //   .bxslider {
-  //     position: relative;
-  //     z-index: 1;
-
-  //     .bx-wrapper {
-  //       // position: absolute;
-
-  //       // top: 0;
-  //       // left: 0;
-  //     }
-
-  //     /* 프레임 아래에 위치 */
-  //     li {
-  //       img {
-  //         width: 702px;
-  //         height: 596px;
-  //         // width: 100%;
-  //         // display: block;
-  //       }
-  //     }
-  //   }
-  // }
 }
